Fix encoding of object names with spaces
java.net.URLEncoder encodes URLs in application/x-www-form-urlencoded
format. Using URLEncoder to encode object names would turn spaces
into "+", but since the object name appears in the path part of the
Cloud Storage API (http://storage.googleapis.com/<bucket_name>/<object_name>),
the object name has to be encoded in the normal percent encoding format
instead of application/x-www-form-urlencoded. Otherwise, an exception
will be thrown when trying to access files that contains spaces in their
filenames.

Reproduction step:

1.  Upload a file with spaces in its filename, say "Test file", to
Google Cloud Storage (through the Cloud Console or gsutil)
2.  Use appengine-gcs-client to open the file, a FileNotFoundException
is thrown

In general, "%20" works everywhere whereas "+" only works in
application/x-www-form-urlencoded contents such as query string and POST
form data.



Revision created by MOE tool push_codebase.
MOE_MIGRATION=6947